--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+/**
+ * @copyright Copyright (C) Mellanox Technologies Ltd. 2021.  ALL RIGHTS RESERVED.
+ *
+ * See file LICENSE for terms.
+ */
+
 ## 1.0.0 (TBD)
 
 ### Features
