DOCS: Removing repeating authors and fixing names

--- a/AUTHORS
+++ b/AUTHORS
@@ -13,6 +13,5 @@ Pavel Shamis (Pasha)        shamisp@users.noreply.github.com
 Sergey Lebedev              sergeyle@nvidia.com
 Valentin Petrov             valentinp@nvidia.com
 Xiang Gao                   xgao@nvidia.com
-artemry-nv                  artemry@nvidia.com
-shimmybalsam                sbalsam@nvidia.com
-zasdfgbnm-nvidia            xgao@nvidia.com
+Artem Ryabov                artemry@nvidia.com
+Shimmy Balsam               sbalsam@nvidia.com
