DOCS: update author email

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,7 @@
 Alex Margolin               alex.margolin@huawei.com
 Anatoly Vildemanov          anatolyv@nvidia.com
 Boris Karasev               boriska@nvidia.com
-Ching-Hsiang Chu            king770120@gmail.com
+Ching-Hsiang Chu            chchu@fb.com
 Devendar Bureddy            devendar@nvidia.com
 Ferrol Aderholdt            faderholdt@nvidia.com
 Geoffroy Vallee             geoffroy@nvidia.com
