--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,7 @@
 - Added float 128 and float 32, 64, 128 (complex) data types
 - Added Active Sets based collectives to support dynamic groups as well as
   point-to-point messaging
+- Added ucc_team_get_attr interface
 
 ## Core
 - Config file support
@@ -21,8 +22,8 @@
 
 ## CL
 
-- Added split rail all reduce collective implementation
-- Enable hierarchical alltoallv
+- Added split rail allreduce collective implementation
+- Enable hierarchical alltoallv and barrier
 - Fixed cleanup bugs
 
 
@@ -44,7 +45,9 @@
 
 ### GPU Collectives (CUDA, NCCL TL and RCCL TL)
 - Added support for CUDA TL (intranode collectives for NVIDIA GPUs)
-- Added multiring allgatherv, alltoall in CUDA TL
+- Added multiring allgatherv, alltoall, reduce-scatter, and reduce-scatterv
+  multiring in CUDA TL
+- Added topo based ring construction in CUDA TL to maximize bandwidth
 - Added NCCL gather, scatter and its vector variant
 - Enable using multiple streams for collectives
 - Added support for RCCL gather (v), scatter (v), broadcast, allgather (v),
