DOCS: update news and authors for v1.7

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,10 +3,12 @@ Alexey Rivkin              arivkin@nvidia.com
 Anatoly Vildemanov         anatolyv@nvidia.com
 Andrii Bilokur             abilokur@nvidia.com
 Andy Lin                   32576375+andylin-hao@users.noreply.github.com
+Arnaud Celermajer          acelermajer@nvidia.com
 Artem Ryabov               artemry@nvidia.com
 Boris Karasev              boriska@nvidia.com
 Brad Settlemyer            bws@deepcopy.org
 Ching-Hsiang Chu           chchu@fb.com
+Daniel Pressler            danielpr@nvidia.com
 Devendar Bureddy           devendar@nvidia.com
 Edgar Gabriel              Edgar.Gabriel@amd.com
 Evgeny Keidar              ekeidar@nvidia.com
